--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Vicki and Tyler</title>
+    <title>Vicki&amp;Tyler</title>
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
-    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+    <style>
+    @font-face {
+        font-family: myFirstFont;
+        src: url('./resources/fonts/SpecialElite.ttf');
+    }
+
+    </style>
+    <!--<link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'> -->
   </head>
   <body>
-    <h1><span id="h1text">Vicki and Tyler</span></h1>
+    <h1><span id="h1text">V<span id="amp">&amp;</span>T</h1>
     <h2>11.3.17</h2>
     <form>
       <label>
