More content needed

--- a/index.html
+++ b/index.html
@@ -14,24 +14,29 @@
     <!--<link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'> -->
   </head>
   <body>
-    <h1><span id="h1text">V<span id="amp">&amp;</span>T</h1>
-    <h2>11.3.17</h2>
-    <form>
-      <label>
-        Name:
-        <input id="name" type="text" name="name">
-      </label>
-      <select>
-        <option value="select">--select--</option>
-        <option value="salad">Veggie Salad</option>
-        <option value="panini">Half Grilled Panini/Side Salad</option>
-        <option value="pizza">Farm Pizza/Side Salad</option>
-      </select> <br>
-       <p>
-        <button class="w3-button w3-blue w3-round-large" type="submit">Submit
-        </button>
-      </p>
-    </form>
+    <header>
+      <h1>V<span id="amp">&amp;</span> T</h1>
+      <h2 id="date">11.3.17</h2>
+    </header>
+    <div class="RSVP">
+      <h3>RSVP</h3>
+      <form>
+        <label>
+          Name:
+          <input id="name" type="text" name="name">
+        </label>
+        <select>
+          <option value="select">--select--</option>
+          <option value="salad">Veggie Salad</option>
+          <option value="panini">Half Grilled Panini/Side Salad</option>
+          <option value="pizza">Farm Pizza/Side Salad</option>
+        </select> <br>
+         <p>
+          <button class="w3-button w3-blue w3-round-large" type="submit">Submit
+          </button>
+        </p>
+      </form>
+  </div>
 
 
   </body>
