Fix formatting issues

--- a/index.html
+++ b/index.html
@@ -15,9 +15,23 @@
   </head>
   <body>
     <header>
-      <h1>V<span id="amp">&amp;</span> T</h1>
+      <h1 class="logo">V<span id="amp">&amp;</span>T</h1>
       <h2 id="date">11.3.17</h2>
     </header>
+    <div class="about">
+
+    </div>
+    <div class="registry">
+      <h4>Wedding Registries</h4>
+      <p >We are registered at <a href="https://www.amazon.com">Amazon</a> and <a href="https://www.target.com/">Target</a>. <br> <br>
+        Thank you for supporting us in our new life together!</p>
+    </div>
+    <div class="photos">
+
+    </div>
+    <div class="event">
+
+    </div>
     <div class="RSVP">
       <h3>RSVP</h3>
       <form>
