--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Vicki&amp;Tyler</title>
+  <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
   <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
-  <link rel="stylesheet" type="text/css" href="./resources/css/form.css">
   <style>
   @font-face {
     font-family: myFirstFont;
@@ -21,43 +21,123 @@
   </style>
 </head>
 <body>
+  <header>
     <h1 class="logo">V<span id="amp">&amp;</span>T</h1>
     <h2 id="date">11.3.17</h2>
   </header>
   <div class="about">
     <h2>About Us</h2>
-    <img  id="rockon" src="./resources/images/rockonrock.jpg" alt="">
     <img class="about" src="./resources/images/stairsfinal.png" alt="">
 
   </div>
   <div class="registry">
-    <h4>Wedding Registry</h4>
-    <p >We are registered at <a href="https://www.amazon.com">Amazon</a> and <a href="https://www.target.com/">Target</a>. <br> <br>
-      Thank you for supporting us in our new life together!</p>
+    <div class="content">
+      <h4>Wedding Registry</h4>
+      <p>We are registered at <a href="https://www.amazon.com">Amazon</a> and <a href="https://www.target.com/">Target</a>. <br> <br>
+        Thank you for supporting us in our new life together!</p>
     </div>
-    <div class="photos">
+  </div>
+  <div "class="RSVP"">
+    <h3>RSVP</h3>
+     <!-- <table id="myTable">
+       <tr>
+         <td>Name:</td>
+         <td>Attending</td>
+         <td>Entreé</td>
+       </tr>
+       <tr>
+         <td><input type="text" name="data[0][name]" value="" id="name0" /></td>
+         <td>
+           <select name="data[0][attending]" id="attending1">
+             <option value="1" class="attendingyes">Yes</option>
+             <option value="0" class="attendingno">No</option>
+           </select>
+         </td>
+         <td>
+           <select name="field4" class="select-field">
+             <option value="Appointment">Veggie Salad</option>
+             <option value="Interview">Half Grilled Panini/Side Salad</option>
+             <option value="Regarding a post">Farm Pizza/Side Salad</option>
+           </select>
+         </td>
+       </tr>
+     </table>
+<br>
 
-    </div>
-    <div class="event">
+<button onclick="myCreateFunction()">Add Guest</button>
+<button onclick="myDeleteFunction()">Delete row</button>
 
-    </div>
-    <div "class="RSVP"">
-      <h3>RSVP</h3>
+<script>
+function myCreateFunction() {
+    var table = form.getElementById("myTable");
+    var row = table.insertRow(1);
+    var cell1 = row.insertCell(0);
+    var cell2 = row.insertCell(1);
+    var cell3 = row.insertCell(2);
+    cell1.innerHTML = "NEW CELL1";
+    cell2.innerHTML = "NEW CELL2";
+    cell3.innerHTML = "NEW CELL3";
+}
+
+function myDeleteFunction() {
+    document.getElementById("myTable").deleteRow(0);
+}
+</script> -->
+
+
+<table id="myTable">
+  <tr>
+    <td>First &amp; Last Name:</td>
+    <td>Entreé</td>
+  </tr>
+  <tr>
+    <td><input type="text" name="data[0][name]" value="" id="name0" /></td>
+    <td>
       <form>
-        <fieldset>
-          <legend>Personal</legend>
-          <label for="field1"><span>Name<span class="required">*  </span></span><input type="text" class="input-field" name="field1" value="" /></label>
-          <label for="field4"><span>   Entreé<span class="required">*  </span></span><select name="field4" class="select-field">
-            <option value="Appointment">Veggie Salad</option>
-            <option value="Interview">Half Grilled Panini/Side Salad</option>
-            <option value="Regarding a post">Farm Pizza/Side Salad</option>
-          </select>
-        </label>
-      </fieldset> <br>
-      <label><span>&nbsp;</span><input type="submit" value="Submit" /></label>
-    </fieldset>
-    <br> <br>
-  </form>
-</div>
+        <select name="field4" class="select-field" id="food">
+          <option value="Appointment">Veggie Salad</option>
+          <option value="Interview">Half Grilled Panini/Side Salad</option>
+          <option value="Regarding a post">Farm Pizza/Side Salad</option>
+        </select>
+      </form>
+    </td>
+  </tr>
+</table>
+<br>
+
+<button onclick="myCreateFunction()">Create row</button>
+<button onclick="myDeleteFunction()">Delete row</button>
+
+<script>
+function myCreateFunction() {
+    var table = document.getElementById("myTable");
+    var rowCount = table.rows.length;
+    var row = table.insertRow(rowCount);
+    var cell1 = row.insertCell(0);
+    var cell2 = row.insertCell(1);
+    var newText  = document.createElement('input');
+    var newSelect = document.getElementById("food");
+
+    newText.type = 'text';
+    cell1.appendChild(newText);
+    cell2.appendChild(newSelect);
+
+}
+
+function myDeleteFunction() {
+
+  var table = document.getElementById("myTable");
+  var rowCount = table.rows.length;
+  if (rowCount > 1) {
+  table.deleteRow(rowCount-1);
+}
+}
+</script>
+
+
+
+
+
+  </div>
 </body>
 </html>
