--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="galleryimgs">
       <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
       <img id="coralcar" class="mySlides" src="./resources/images/stairsfinal.png" style="width:100%">
-      <img id="flowers" class="mySlides" src="./resources/images/flowers.jpg" style="width:100%">
+      <img id="flowers" class="mySlides" src="./resources/images/flowers.JPG" style="width:100%">
       <img id="magnolia" class="mySlides" src="./resources/images/magnolia.jpg" style="width:100%">
       <img id="refuge" class="mySlides" src="./resources/images/refuge.jpg" style="width:100%">
       <img id="southwest" class="mySlides" src="./resources/images/southwest2.jpg" style="width:100%">
