--- a/index.html
+++ b/index.html
@@ -74,18 +74,20 @@
   </header>
 
   <div class="gallery">
+    <div class="title2">
     <h2>About Us</h2>
+    </div>
     <div class="galleryimgs">
-      <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+      <button class="button" id="leftbutton" onclick="plusDivs(-1)">&#10094;</button>
       <img id="coralcar" class="mySlides" src="./resources/images/stairsfinal.png" style="width:100%">
-      <img id="flowers" class="mySlides" src="./resources/images/flowers.JPG" style="width:100%">
-      <img id="magnolia" class="mySlides" src="./resources/images/magnolia.jpg" style="width:100%">
-      <img id="refuge" class="mySlides" src="./resources/images/refuge.jpg" style="width:100%">
+      <img id="flowers" class="mySlides" src="./resources/images/flowers2.jpg" style="width:100%">
+      <img id="magnolia" class="mySlides" src="./resources/images/magnolia2.jpg" style="width:100%">
+      <img id="refuge" class="mySlides" src="./resources/images/refuge2.jpg" style="width:100%">
       <img id="southwest" class="mySlides" src="./resources/images/southwest2.jpg" style="width:100%">
-      <img class="mySlides" src="./resources/images/coralcar.jpg" style="width:100%">
-      <img class="mySlides" src="./resources/images/vickiflowers.jpg" style="width:100%">
+      <img class="mySlides" src="./resources/images/coralcar2.jpg" style="width:100%">
+      <img class="mySlides" src="./resources/images/vickiflowers2.jpg" style="width:100%">
       <img class="mySlides" src="./resources/images/rockonrock2.jpg" style="width:100%">
-      <button class="w3-button w3-black w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+      <button class="button" id="rightbutton" onclick="plusDivs(+1)">&#10095;</button>
       <br><br>
       <!-- <div class="galbutton">
         <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
