--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <div class="gallery">
     <div class="title2">
-    <h2>About Us</h2>
+    <h2>About Us</h2> <br><br>
     </div>
     <div class="galleryimgs">
       <button class="button" id="leftbutton" onclick="plusDivs(-1)">&#10094;</button>
